// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Basic ActionMenu should match snapshot 1`] = `
.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
  cursor: pointer;
}

.c2:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c2::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c2::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

.c2::-webkit-inner-spin-button {
  height: auto;
}

.c2::-webkit-outer-spin-button {
  height: auto;
}

.c2::before,
.c2::after {
  box-sizing: border-box;
}

.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c0::before,
.c0::after {
  box-sizing: border-box;
}

.c6 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c6::before,
.c6::after {
  box-sizing: border-box;
}

.c4 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c4::before,
.c4::after {
  box-sizing: border-box;
}

.c7 {
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c7.fi-action-menu-popover {
  background-color: hsl(0,0%,100%);
  box-shadow: 0px 4px 8px 0px hsla(0,0%,13%,0.14);
  border: 1px solid hsl(0,0%,42%);
  border-radius: 2px;
  padding-top: 8px;
  padding-bottom: 8px;
  z-index: 888;
}

.c7.fi-action-menu-popover--hidden {
  visibility: hidden;
}

.c7 .fi-action-menu-popover_list {
  margin: 0;
  padding-left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  list-style-type: none;
  overflow-y: auto;
  max-height: 265px;
}

.c7 .fi-action-menu-popover_list:focus {
  outline: none;
}

.c7 .fi-action-menu-popover_popper-arrow::before,
.c7 .fi-action-menu-popover_popper-arrow::after {
  content: '';
  position: absolute;
  left: -9px;
  height: 0;
  width: 0;
  border: solid transparent;
  pointer-events: none;
}

.c7 .fi-action-menu-popover_popper-arrow[data-popper-placement^='bottom-end'] {
  bottom: 100%;
}

.c7 .fi-action-menu-popover_popper-arrow[data-popper-placement^='bottom-end']::before {
  border-bottom-color: hsl(0,0%,42%);
  border-width: 9px;
  margin-right: -9px;
  bottom: 100%;
}

.c7 .fi-action-menu-popover_popper-arrow[data-popper-placement^='bottom-end']::after {
  border-bottom-color: hsl(0,0%,100%);
  border-width: 8px;
  margin-right: -9px;
  left: -8px;
  bottom: 100%;
}

.c7 .fi-action-menu-popover_popper-arrow[data-popper-placement^='top-end'] {
  top: 100%;
}

.c7 .fi-action-menu-popover_popper-arrow[data-popper-placement^='top-end']::before {
  border-top-color: hsl(0,0%,42%);
  border-width: 9px;
  margin-right: -9px;
}

.c7 .fi-action-menu-popover_popper-arrow[data-popper-placement^='top-end']::after {
  border-top-color: hsl(0,0%,100%);
  border-width: 8px;
  margin-right: -9px;
  left: -8px;
}

.c3 {
  color: hsl(0,0%,13%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  padding: 9px 20px;
  min-height: 40px;
  color: hsl(0,0%,100%);
  background: linear-gradient(0deg,hsl(212,63%,37%) 0%,hsl(212,63%,45%) 100%);
  border-radius: 2px;
  text-align: center;
  text-shadow: 0 1px 1px hsla(214,100%,24%,0.5);
  cursor: pointer;
  border: 1px solid transparent;
}

.c3:focus {
  position: relative;
  outline: 3px solid transparent;
}

.c3:focus::after {
  content: '';
  position: absolute;
  pointer-events: none;
  top: -2px;
  right: -2px;
  bottom: -2px;
  left: -2px;
  border-radius: 2px;
  background-color: transparent;
  border: 0px solid hsl(0,0%,100%);
  box-sizing: border-box;
  box-shadow: 0 0 0 2px hsl(196,77%,44%);
  z-index: 9999;
}

.c3:hover {
  background: linear-gradient(0deg,hsl(212,63%,45%) 0%,hsl(212,63%,49%) 100%);
  outline: 2px solid transparent;
}

.c3:active {
  background: hsl(212,63%,37%);
}

.c3.fi-button--disabled,
.c3[disabled],
.c3:disabled {
  text-shadow: 0 1px 1px rgba(33,33,33,0.5);
  background: linear-gradient(0deg,hsl(202,7%,67%) 0%,hsl(202,7%,80%) 100%);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: not-allowed;
}

.c3.fi-button--disabled::after {
  border: none;
  box-shadow: none;
}

.c3.fi-button--fullwidth {
  display: block;
  width: 100%;
}

.c3.fi-button--inverted {
  background: none;
  background-color: hsl(212,63%,45%);
  border: 1px solid hsl(0,0%,100%);
  text-shadow: none;
}

.c3.fi-button--inverted:hover {
  background: linear-gradient(-180deg,hsla(0,0%,100%,0.1) 0%,hsla(0,0%,100%,0) 100%);
}

.c3.fi-button--inverted:active {
  background: none;
  background-color: hsl(212,63%,45%);
}

.c3.fi-button--inverted.fi-button--disabled,
.c3.fi-button--inverted[disabled],
.c3.fi-button--inverted:disabled {
  opacity: 0.41;
  background: none;
  background-color: none;
}

.c3.fi-button--secondary {
  color: hsl(212,63%,45%);
  background: none;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(212,63%,45%);
  text-shadow: none;
}

.c3.fi-button--secondary:hover {
  background: linear-gradient(-180deg,hsl(202,7%,93%) 0%,hsla(0,0%,100%,0) 100%);
}

.c3.fi-button--secondary:active {
  background: none;
  background-color: hsl(202,7%,93%);
}

.c3.fi-button--secondary.fi-button--disabled,
.c3.fi-button--secondary[disabled],
.c3.fi-button--secondary:disabled {
  color: hsl(202,7%,67%);
  text-shadow: none;
  background: none;
  background-color: hsl(212,63%,98%);
  border-color: hsl(202,7%,67%);
}

.c3.fi-button--secondary-noborder {
  color: hsl(212,63%,45%);
  background: none;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(212,63%,45%);
  text-shadow: none;
  border: none;
  padding: 10px 20px;
  background-color: transparent;
}

.c3.fi-button--secondary-noborder:hover {
  background: linear-gradient(-180deg,hsl(202,7%,93%) 0%,hsla(0,0%,100%,0) 100%);
}

.c3.fi-button--secondary-noborder:active {
  background: none;
  background-color: hsl(202,7%,93%);
}

.c3.fi-button--secondary-noborder.fi-button--disabled,
.c3.fi-button--secondary-noborder[disabled],
.c3.fi-button--secondary-noborder:disabled {
  color: hsl(202,7%,67%);
  text-shadow: none;
  background: none;
  background-color: hsl(212,63%,98%);
  border-color: hsl(202,7%,67%);
}

.c3.fi-button--secondary-light {
  color: hsl(212,63%,45%);
  color: hsl(212,63%,45%);
  background: none;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(212,63%,45%);
  text-shadow: none;
  background: linear-gradient(0deg,hsl(215,100%,95%),hsl(215,100%,97%));
  padding: 10px 20px;
  border: none;
}

.c3.fi-button--secondary-light:hover {
  background: linear-gradient(-180deg,hsl(202,7%,93%) 0%,hsla(0,0%,100%,0) 100%);
}

.c3.fi-button--secondary-light:active {
  background: none;
  background-color: hsl(202,7%,93%);
}

.c3.fi-button--secondary-light.fi-button--disabled,
.c3.fi-button--secondary-light[disabled],
.c3.fi-button--secondary-light:disabled {
  color: hsl(202,7%,67%);
  text-shadow: none;
  background: none;
  background-color: hsl(212,63%,98%);
  border-color: hsl(202,7%,67%);
}

.c3.fi-button--secondary-light:hover {
  background: linear-gradient(0deg,hsl(215,100%,97%),hsl(212,63%,98%));
}

.c3.fi-button--secondary-light:active {
  background: linear-gradient(0deg,hsl(202,7%,93%),hsl(202,7%,97%));
}

.c3.fi-button--secondary-light.fi-button--disabled,
.c3.fi-button--secondary-light[disabled],
.c3.fi-button--secondary-light:disabled {
  color: hsl(202,7%,67%);
  background: none;
  background-color: hsl(202,7%,97%);
}

.c3 > .fi-button_icon > .fi-icon {
  width: 16px;
  height: 16px;
  margin-right: 8px;
  vertical-align: middle;
  -webkit-transform: translateY(-0.1em);
  -ms-transform: translateY(-0.1em);
  transform: translateY(-0.1em);
}

.c3 > .fi-button_icon--right > .fi-icon {
  margin-right: 0;
  margin-left: 8px;
}

.c3.fi-button--icon-only {
  padding: 6px 11px;
}

.c3.fi-button--icon-only > .fi-button_icon > .fi-icon {
  margin-right: 0;
}

.c3.fi-button--icon-only > .fi-button_icon--right > .fi-icon {
  margin-left: 0;
}

.c3.fi-button--disabled > .fi-button_icon {
  cursor: not-allowed;
}

.c5 {
  vertical-align: baseline;
}

.c5.fi-icon {
  display: inline-block;
}

.c5 .fi-icon-base-fill {
  fill: currentColor;
}

.c5 .fi-icon-base-stroke {
  stroke: currentColor;
}

.c5.fi-icon--cursor-pointer {
  cursor: pointer;
}

.c5.fi-icon--cursor-pointer * {
  cursor: inherit;
}

.c1.fi-action-menu--full-width {
  width: 100%;
}

.c8 {
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c8.fi-action-menu-item {
  position: relative;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: hsl(0,0%,13%);
  padding: 10px 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: pointer;
  background: inherit;
  border: none;
  border-radius: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8.fi-action-menu-item:active,
.c8.fi-action-menu-item:focus,
.c8.fi-action-menu-item:hover,
.c8.fi-action-menu-item:visited {
  border: none;
  outline: none;
  color: hsl(0,0%,13%);
}

.c8.fi-action-menu-item .fi-icon {
  margin-right: 8px;
  width: 16px;
  height: 16px;
  pointer-events: none;
}

.c8.fi-action-menu-item--disabled {
  cursor: not-allowed;
  color: hsl(202,7%,67%);
}

.c8.fi-action-menu-item--disabled:active,
.c8.fi-action-menu-item--disabled:focus,
.c8.fi-action-menu-item--disabled:hover,
.c8.fi-action-menu-item--disabled:visited {
  color: hsl(202,7%,67%);
}

.c8.fi-action-menu-item--selected {
  color: hsl(0,0%,100%);
  background: hsl(212,63%,45%);
}

.c8.fi-action-menu-item--selected:active,
.c8.fi-action-menu-item--selected:focus,
.c8.fi-action-menu-item--selected:hover,
.c8.fi-action-menu-item--selected:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: hsl(0,0%,100%);
  cursor: pointer;
}

.c8.fi-action-menu-item--selected:after {
  content: '';
}

.c8.fi-action-menu-item--selected.fi-action-menu-item--disabled {
  cursor: not-allowed;
  color: hsl(202,7%,67%);
}

.c9.fi-action-menu-divider {
  height: 17px;
  min-height: 17px;
  padding-left: 15px;
  padding-right: 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c9.fi-action-menu-divider .fi-action-menu-divider_line {
  height: 1px;
  width: 100%;
  background-color: hsl(202,7%,80%);
}

@media (forced-colors:active) {
  .c8.fi-action-menu-item--disabled {
    color: GrayText;
  }
}

@media (forced-colors:active) {
  .c8.fi-action-menu-item--selected:after {
    position: absolute;
    left: 1px;
    right: 1px;
    top: 1px;
    bottom: 1px;
    border: solid 3px Highlight;
  }
}

@media (forced-colors:active) {
  .c8.fi-action-menu-item--selected.fi-action-menu-item--disabled {
    color: GrayText;
  }
}

@media (forced-colors:active) {
  .c9.fi-action-menu-divider .fi-action-menu-divider_line {
    background-color: Highlight;
  }
}

<body>
  <div>
    <div
      class="c0 fi-action-menu c1 am-test"
    >
      <button
        aria-controls="test-id-menu"
        aria-disabled="false"
        aria-expanded="false"
        aria-haspopup="menu"
        aria-label="am-test"
        class="c2 fi-button c3 fi-button--secondary"
        id="test-id"
        name="am-test-name"
        tabindex="0"
        type="button"
      >
        Actions
        <span
          class="c4 fi-button_icon fi-button_icon--right"
        >
          <svg
            aria-hidden="true"
            class="fi-icon c5"
            focusable="false"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="fi-icon-base-fill"
              d="M12 6c-1.654 0-3-1.346-3-3s1.346-3 3-3 3 1.346 3 3-1.346 3-3 3m0 9c-1.654 0-3-1.346-3-3s1.346-3 3-3 3 1.346 3 3-1.346 3-3 3m0 9c-1.654 0-3-1.346-3-3s1.346-3 3-3 3 1.346 3 3-1.346 3-3 3"
              fill="#222"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
      <div
        class="c6 c7 fi-action-menu-popover fi-action-menu-popover--hidden"
        role="none"
        style="position: fixed; left: 0px; top: 0px;"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          class="c6 fi-action-menu-popover_list"
          id="test-id-menu"
          role="menu"
          tabindex="-1"
        >
          <button
            class="c2 fi-action-menu-item c8"
            id="test-id-menu-list-item-0"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            Item 1
          </button>
          <button
            class="c2 fi-action-menu-item c8"
            id="test-id-menu-list-item-1"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            Item 2
          </button>
          <div
            class="c0 c9 fi-action-menu-divider"
            role="presentation"
          >
            <div
              class="c0 fi-action-menu-divider_line"
            />
          </div>
          <button
            class="c2 fi-action-menu-item c8"
            id="test-id-menu-list-item-3"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            Item 3
          </button>
        </div>
        <div
          aria-hidden="true"
          class="fi-action-menu-popover_popper-arrow"
          data-popper-arrow="true"
          style="position: absolute;"
          tabindex="-1"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Disabled ActionMenu should match snapshot 1`] = `
.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
  cursor: pointer;
}

.c2:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c2::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c2::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

.c2::-webkit-inner-spin-button {
  height: auto;
}

.c2::-webkit-outer-spin-button {
  height: auto;
}

.c2::before,
.c2::after {
  box-sizing: border-box;
}

.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c0::before,
.c0::after {
  box-sizing: border-box;
}

.c6 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c6::before,
.c6::after {
  box-sizing: border-box;
}

.c4 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c4::before,
.c4::after {
  box-sizing: border-box;
}

.c7 {
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c7.fi-action-menu-popover {
  background-color: hsl(0,0%,100%);
  box-shadow: 0px 4px 8px 0px hsla(0,0%,13%,0.14);
  border: 1px solid hsl(0,0%,42%);
  border-radius: 2px;
  padding-top: 8px;
  padding-bottom: 8px;
  z-index: 888;
}

.c7.fi-action-menu-popover--hidden {
  visibility: hidden;
}

.c7 .fi-action-menu-popover_list {
  margin: 0;
  padding-left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  list-style-type: none;
  overflow-y: auto;
  max-height: 265px;
}

.c7 .fi-action-menu-popover_list:focus {
  outline: none;
}

.c7 .fi-action-menu-popover_popper-arrow::before,
.c7 .fi-action-menu-popover_popper-arrow::after {
  content: '';
  position: absolute;
  left: -9px;
  height: 0;
  width: 0;
  border: solid transparent;
  pointer-events: none;
}

.c7 .fi-action-menu-popover_popper-arrow[data-popper-placement^='bottom-end'] {
  bottom: 100%;
}

.c7 .fi-action-menu-popover_popper-arrow[data-popper-placement^='bottom-end']::before {
  border-bottom-color: hsl(0,0%,42%);
  border-width: 9px;
  margin-right: -9px;
  bottom: 100%;
}

.c7 .fi-action-menu-popover_popper-arrow[data-popper-placement^='bottom-end']::after {
  border-bottom-color: hsl(0,0%,100%);
  border-width: 8px;
  margin-right: -9px;
  left: -8px;
  bottom: 100%;
}

.c7 .fi-action-menu-popover_popper-arrow[data-popper-placement^='top-end'] {
  top: 100%;
}

.c7 .fi-action-menu-popover_popper-arrow[data-popper-placement^='top-end']::before {
  border-top-color: hsl(0,0%,42%);
  border-width: 9px;
  margin-right: -9px;
}

.c7 .fi-action-menu-popover_popper-arrow[data-popper-placement^='top-end']::after {
  border-top-color: hsl(0,0%,100%);
  border-width: 8px;
  margin-right: -9px;
  left: -8px;
}

.c3 {
  color: hsl(0,0%,13%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  padding: 9px 20px;
  min-height: 40px;
  color: hsl(0,0%,100%);
  background: linear-gradient(0deg,hsl(212,63%,37%) 0%,hsl(212,63%,45%) 100%);
  border-radius: 2px;
  text-align: center;
  text-shadow: 0 1px 1px hsla(214,100%,24%,0.5);
  cursor: pointer;
  border: 1px solid transparent;
}

.c3:focus {
  position: relative;
  outline: 3px solid transparent;
}

.c3:focus::after {
  content: '';
  position: absolute;
  pointer-events: none;
  top: -2px;
  right: -2px;
  bottom: -2px;
  left: -2px;
  border-radius: 2px;
  background-color: transparent;
  border: 0px solid hsl(0,0%,100%);
  box-sizing: border-box;
  box-shadow: 0 0 0 2px hsl(196,77%,44%);
  z-index: 9999;
}

.c3:hover {
  background: linear-gradient(0deg,hsl(212,63%,45%) 0%,hsl(212,63%,49%) 100%);
  outline: 2px solid transparent;
}

.c3:active {
  background: hsl(212,63%,37%);
}

.c3.fi-button--disabled,
.c3[disabled],
.c3:disabled {
  text-shadow: 0 1px 1px rgba(33,33,33,0.5);
  background: linear-gradient(0deg,hsl(202,7%,67%) 0%,hsl(202,7%,80%) 100%);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: not-allowed;
}

.c3.fi-button--disabled::after {
  border: none;
  box-shadow: none;
}

.c3.fi-button--fullwidth {
  display: block;
  width: 100%;
}

.c3.fi-button--inverted {
  background: none;
  background-color: hsl(212,63%,45%);
  border: 1px solid hsl(0,0%,100%);
  text-shadow: none;
}

.c3.fi-button--inverted:hover {
  background: linear-gradient(-180deg,hsla(0,0%,100%,0.1) 0%,hsla(0,0%,100%,0) 100%);
}

.c3.fi-button--inverted:active {
  background: none;
  background-color: hsl(212,63%,45%);
}

.c3.fi-button--inverted.fi-button--disabled,
.c3.fi-button--inverted[disabled],
.c3.fi-button--inverted:disabled {
  opacity: 0.41;
  background: none;
  background-color: none;
}

.c3.fi-button--secondary {
  color: hsl(212,63%,45%);
  background: none;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(212,63%,45%);
  text-shadow: none;
}

.c3.fi-button--secondary:hover {
  background: linear-gradient(-180deg,hsl(202,7%,93%) 0%,hsla(0,0%,100%,0) 100%);
}

.c3.fi-button--secondary:active {
  background: none;
  background-color: hsl(202,7%,93%);
}

.c3.fi-button--secondary.fi-button--disabled,
.c3.fi-button--secondary[disabled],
.c3.fi-button--secondary:disabled {
  color: hsl(202,7%,67%);
  text-shadow: none;
  background: none;
  background-color: hsl(212,63%,98%);
  border-color: hsl(202,7%,67%);
}

.c3.fi-button--secondary-noborder {
  color: hsl(212,63%,45%);
  background: none;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(212,63%,45%);
  text-shadow: none;
  border: none;
  padding: 10px 20px;
  background-color: transparent;
}

.c3.fi-button--secondary-noborder:hover {
  background: linear-gradient(-180deg,hsl(202,7%,93%) 0%,hsla(0,0%,100%,0) 100%);
}

.c3.fi-button--secondary-noborder:active {
  background: none;
  background-color: hsl(202,7%,93%);
}

.c3.fi-button--secondary-noborder.fi-button--disabled,
.c3.fi-button--secondary-noborder[disabled],
.c3.fi-button--secondary-noborder:disabled {
  color: hsl(202,7%,67%);
  text-shadow: none;
  background: none;
  background-color: hsl(212,63%,98%);
  border-color: hsl(202,7%,67%);
}

.c3.fi-button--secondary-light {
  color: hsl(212,63%,45%);
  color: hsl(212,63%,45%);
  background: none;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(212,63%,45%);
  text-shadow: none;
  background: linear-gradient(0deg,hsl(215,100%,95%),hsl(215,100%,97%));
  padding: 10px 20px;
  border: none;
}

.c3.fi-button--secondary-light:hover {
  background: linear-gradient(-180deg,hsl(202,7%,93%) 0%,hsla(0,0%,100%,0) 100%);
}

.c3.fi-button--secondary-light:active {
  background: none;
  background-color: hsl(202,7%,93%);
}

.c3.fi-button--secondary-light.fi-button--disabled,
.c3.fi-button--secondary-light[disabled],
.c3.fi-button--secondary-light:disabled {
  color: hsl(202,7%,67%);
  text-shadow: none;
  background: none;
  background-color: hsl(212,63%,98%);
  border-color: hsl(202,7%,67%);
}

.c3.fi-button--secondary-light:hover {
  background: linear-gradient(0deg,hsl(215,100%,97%),hsl(212,63%,98%));
}

.c3.fi-button--secondary-light:active {
  background: linear-gradient(0deg,hsl(202,7%,93%),hsl(202,7%,97%));
}

.c3.fi-button--secondary-light.fi-button--disabled,
.c3.fi-button--secondary-light[disabled],
.c3.fi-button--secondary-light:disabled {
  color: hsl(202,7%,67%);
  background: none;
  background-color: hsl(202,7%,97%);
}

.c3 > .fi-button_icon > .fi-icon {
  width: 16px;
  height: 16px;
  margin-right: 8px;
  vertical-align: middle;
  -webkit-transform: translateY(-0.1em);
  -ms-transform: translateY(-0.1em);
  transform: translateY(-0.1em);
}

.c3 > .fi-button_icon--right > .fi-icon {
  margin-right: 0;
  margin-left: 8px;
}

.c3.fi-button--icon-only {
  padding: 6px 11px;
}

.c3.fi-button--icon-only > .fi-button_icon > .fi-icon {
  margin-right: 0;
}

.c3.fi-button--icon-only > .fi-button_icon--right > .fi-icon {
  margin-left: 0;
}

.c3.fi-button--disabled > .fi-button_icon {
  cursor: not-allowed;
}

.c5 {
  vertical-align: baseline;
}

.c5.fi-icon {
  display: inline-block;
}

.c5 .fi-icon-base-fill {
  fill: currentColor;
}

.c5 .fi-icon-base-stroke {
  stroke: currentColor;
}

.c5.fi-icon--cursor-pointer {
  cursor: pointer;
}

.c5.fi-icon--cursor-pointer * {
  cursor: inherit;
}

.c1.fi-action-menu--full-width {
  width: 100%;
}

.c8 {
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c8.fi-action-menu-item {
  position: relative;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: hsl(0,0%,13%);
  padding: 10px 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: pointer;
  background: inherit;
  border: none;
  border-radius: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8.fi-action-menu-item:active,
.c8.fi-action-menu-item:focus,
.c8.fi-action-menu-item:hover,
.c8.fi-action-menu-item:visited {
  border: none;
  outline: none;
  color: hsl(0,0%,13%);
}

.c8.fi-action-menu-item .fi-icon {
  margin-right: 8px;
  width: 16px;
  height: 16px;
  pointer-events: none;
}

.c8.fi-action-menu-item--disabled {
  cursor: not-allowed;
  color: hsl(202,7%,67%);
}

.c8.fi-action-menu-item--disabled:active,
.c8.fi-action-menu-item--disabled:focus,
.c8.fi-action-menu-item--disabled:hover,
.c8.fi-action-menu-item--disabled:visited {
  color: hsl(202,7%,67%);
}

.c8.fi-action-menu-item--selected {
  color: hsl(0,0%,100%);
  background: hsl(212,63%,45%);
}

.c8.fi-action-menu-item--selected:active,
.c8.fi-action-menu-item--selected:focus,
.c8.fi-action-menu-item--selected:hover,
.c8.fi-action-menu-item--selected:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: hsl(0,0%,100%);
  cursor: pointer;
}

.c8.fi-action-menu-item--selected:after {
  content: '';
}

.c8.fi-action-menu-item--selected.fi-action-menu-item--disabled {
  cursor: not-allowed;
  color: hsl(202,7%,67%);
}

.c9.fi-action-menu-divider {
  height: 17px;
  min-height: 17px;
  padding-left: 15px;
  padding-right: 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c9.fi-action-menu-divider .fi-action-menu-divider_line {
  height: 1px;
  width: 100%;
  background-color: hsl(202,7%,80%);
}

@media (forced-colors:active) {
  .c8.fi-action-menu-item--disabled {
    color: GrayText;
  }
}

@media (forced-colors:active) {
  .c8.fi-action-menu-item--selected:after {
    position: absolute;
    left: 1px;
    right: 1px;
    top: 1px;
    bottom: 1px;
    border: solid 3px Highlight;
  }
}

@media (forced-colors:active) {
  .c8.fi-action-menu-item--selected.fi-action-menu-item--disabled {
    color: GrayText;
  }
}

@media (forced-colors:active) {
  .c9.fi-action-menu-divider .fi-action-menu-divider_line {
    background-color: Highlight;
  }
}

<body>
  <div>
    <div
      class="c0 fi-action-menu c1 am-test"
    >
      <button
        aria-controls="test-id-menu"
        aria-disabled="true"
        aria-expanded="false"
        aria-haspopup="menu"
        aria-label="am-test"
        class="c2 fi-button c3 fi-button--disabled fi-button--secondary"
        disabled=""
        id="test-id"
        name="am-test-name"
        type="button"
      >
        Actions
        <span
          class="c4 fi-button_icon fi-button_icon--right"
        >
          <svg
            aria-hidden="true"
            class="fi-icon c5"
            focusable="false"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="fi-icon-base-fill"
              d="M12 6c-1.654 0-3-1.346-3-3s1.346-3 3-3 3 1.346 3 3-1.346 3-3 3m0 9c-1.654 0-3-1.346-3-3s1.346-3 3-3 3 1.346 3 3-1.346 3-3 3m0 9c-1.654 0-3-1.346-3-3s1.346-3 3-3 3 1.346 3 3-1.346 3-3 3"
              fill="#222"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
      <div
        class="c6 c7 fi-action-menu-popover fi-action-menu-popover--hidden"
        role="none"
        style="position: fixed; left: 0px; top: 0px;"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          class="c6 fi-action-menu-popover_list"
          id="test-id-menu"
          role="menu"
          tabindex="-1"
        >
          <button
            class="c2 fi-action-menu-item c8"
            id="test-id-menu-list-item-0"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            Item 1
          </button>
          <button
            class="c2 fi-action-menu-item c8"
            id="test-id-menu-list-item-1"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            Item 2
          </button>
          <div
            class="c0 c9 fi-action-menu-divider"
            role="presentation"
          >
            <div
              class="c0 fi-action-menu-divider_line"
            />
          </div>
          <button
            class="c2 fi-action-menu-item c8"
            id="test-id-menu-list-item-3"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            Item 3
          </button>
        </div>
        <div
          aria-hidden="true"
          class="fi-action-menu-popover_popper-arrow"
          data-popper-arrow="true"
          style="position: absolute;"
          tabindex="-1"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`No borders variant should match snapshot 1`] = `
.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
  cursor: pointer;
}

.c2:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c2::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c2::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

.c2::-webkit-inner-spin-button {
  height: auto;
}

.c2::-webkit-outer-spin-button {
  height: auto;
}

.c2::before,
.c2::after {
  box-sizing: border-box;
}

.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c0::before,
.c0::after {
  box-sizing: border-box;
}

.c6 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c6::before,
.c6::after {
  box-sizing: border-box;
}

.c4 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c4::before,
.c4::after {
  box-sizing: border-box;
}

.c7 {
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c7.fi-action-menu-popover {
  background-color: hsl(0,0%,100%);
  box-shadow: 0px 4px 8px 0px hsla(0,0%,13%,0.14);
  border: 1px solid hsl(0,0%,42%);
  border-radius: 2px;
  padding-top: 8px;
  padding-bottom: 8px;
  z-index: 888;
}

.c7.fi-action-menu-popover--hidden {
  visibility: hidden;
}

.c7 .fi-action-menu-popover_list {
  margin: 0;
  padding-left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  list-style-type: none;
  overflow-y: auto;
  max-height: 265px;
}

.c7 .fi-action-menu-popover_list:focus {
  outline: none;
}

.c7 .fi-action-menu-popover_popper-arrow::before,
.c7 .fi-action-menu-popover_popper-arrow::after {
  content: '';
  position: absolute;
  left: -9px;
  height: 0;
  width: 0;
  border: solid transparent;
  pointer-events: none;
}

.c7 .fi-action-menu-popover_popper-arrow[data-popper-placement^='bottom-end'] {
  bottom: 100%;
}

.c7 .fi-action-menu-popover_popper-arrow[data-popper-placement^='bottom-end']::before {
  border-bottom-color: hsl(0,0%,42%);
  border-width: 9px;
  margin-right: -9px;
  bottom: 100%;
}

.c7 .fi-action-menu-popover_popper-arrow[data-popper-placement^='bottom-end']::after {
  border-bottom-color: hsl(0,0%,100%);
  border-width: 8px;
  margin-right: -9px;
  left: -8px;
  bottom: 100%;
}

.c7 .fi-action-menu-popover_popper-arrow[data-popper-placement^='top-end'] {
  top: 100%;
}

.c7 .fi-action-menu-popover_popper-arrow[data-popper-placement^='top-end']::before {
  border-top-color: hsl(0,0%,42%);
  border-width: 9px;
  margin-right: -9px;
}

.c7 .fi-action-menu-popover_popper-arrow[data-popper-placement^='top-end']::after {
  border-top-color: hsl(0,0%,100%);
  border-width: 8px;
  margin-right: -9px;
  left: -8px;
}

.c3 {
  color: hsl(0,0%,13%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  padding: 9px 20px;
  min-height: 40px;
  color: hsl(0,0%,100%);
  background: linear-gradient(0deg,hsl(212,63%,37%) 0%,hsl(212,63%,45%) 100%);
  border-radius: 2px;
  text-align: center;
  text-shadow: 0 1px 1px hsla(214,100%,24%,0.5);
  cursor: pointer;
  border: 1px solid transparent;
}

.c3:focus {
  position: relative;
  outline: 3px solid transparent;
}

.c3:focus::after {
  content: '';
  position: absolute;
  pointer-events: none;
  top: -2px;
  right: -2px;
  bottom: -2px;
  left: -2px;
  border-radius: 2px;
  background-color: transparent;
  border: 0px solid hsl(0,0%,100%);
  box-sizing: border-box;
  box-shadow: 0 0 0 2px hsl(196,77%,44%);
  z-index: 9999;
}

.c3:hover {
  background: linear-gradient(0deg,hsl(212,63%,45%) 0%,hsl(212,63%,49%) 100%);
  outline: 2px solid transparent;
}

.c3:active {
  background: hsl(212,63%,37%);
}

.c3.fi-button--disabled,
.c3[disabled],
.c3:disabled {
  text-shadow: 0 1px 1px rgba(33,33,33,0.5);
  background: linear-gradient(0deg,hsl(202,7%,67%) 0%,hsl(202,7%,80%) 100%);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: not-allowed;
}

.c3.fi-button--disabled::after {
  border: none;
  box-shadow: none;
}

.c3.fi-button--fullwidth {
  display: block;
  width: 100%;
}

.c3.fi-button--inverted {
  background: none;
  background-color: hsl(212,63%,45%);
  border: 1px solid hsl(0,0%,100%);
  text-shadow: none;
}

.c3.fi-button--inverted:hover {
  background: linear-gradient(-180deg,hsla(0,0%,100%,0.1) 0%,hsla(0,0%,100%,0) 100%);
}

.c3.fi-button--inverted:active {
  background: none;
  background-color: hsl(212,63%,45%);
}

.c3.fi-button--inverted.fi-button--disabled,
.c3.fi-button--inverted[disabled],
.c3.fi-button--inverted:disabled {
  opacity: 0.41;
  background: none;
  background-color: none;
}

.c3.fi-button--secondary {
  color: hsl(212,63%,45%);
  background: none;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(212,63%,45%);
  text-shadow: none;
}

.c3.fi-button--secondary:hover {
  background: linear-gradient(-180deg,hsl(202,7%,93%) 0%,hsla(0,0%,100%,0) 100%);
}

.c3.fi-button--secondary:active {
  background: none;
  background-color: hsl(202,7%,93%);
}

.c3.fi-button--secondary.fi-button--disabled,
.c3.fi-button--secondary[disabled],
.c3.fi-button--secondary:disabled {
  color: hsl(202,7%,67%);
  text-shadow: none;
  background: none;
  background-color: hsl(212,63%,98%);
  border-color: hsl(202,7%,67%);
}

.c3.fi-button--secondary-noborder {
  color: hsl(212,63%,45%);
  background: none;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(212,63%,45%);
  text-shadow: none;
  border: none;
  padding: 10px 20px;
  background-color: transparent;
}

.c3.fi-button--secondary-noborder:hover {
  background: linear-gradient(-180deg,hsl(202,7%,93%) 0%,hsla(0,0%,100%,0) 100%);
}

.c3.fi-button--secondary-noborder:active {
  background: none;
  background-color: hsl(202,7%,93%);
}

.c3.fi-button--secondary-noborder.fi-button--disabled,
.c3.fi-button--secondary-noborder[disabled],
.c3.fi-button--secondary-noborder:disabled {
  color: hsl(202,7%,67%);
  text-shadow: none;
  background: none;
  background-color: hsl(212,63%,98%);
  border-color: hsl(202,7%,67%);
}

.c3.fi-button--secondary-light {
  color: hsl(212,63%,45%);
  color: hsl(212,63%,45%);
  background: none;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(212,63%,45%);
  text-shadow: none;
  background: linear-gradient(0deg,hsl(215,100%,95%),hsl(215,100%,97%));
  padding: 10px 20px;
  border: none;
}

.c3.fi-button--secondary-light:hover {
  background: linear-gradient(-180deg,hsl(202,7%,93%) 0%,hsla(0,0%,100%,0) 100%);
}

.c3.fi-button--secondary-light:active {
  background: none;
  background-color: hsl(202,7%,93%);
}

.c3.fi-button--secondary-light.fi-button--disabled,
.c3.fi-button--secondary-light[disabled],
.c3.fi-button--secondary-light:disabled {
  color: hsl(202,7%,67%);
  text-shadow: none;
  background: none;
  background-color: hsl(212,63%,98%);
  border-color: hsl(202,7%,67%);
}

.c3.fi-button--secondary-light:hover {
  background: linear-gradient(0deg,hsl(215,100%,97%),hsl(212,63%,98%));
}

.c3.fi-button--secondary-light:active {
  background: linear-gradient(0deg,hsl(202,7%,93%),hsl(202,7%,97%));
}

.c3.fi-button--secondary-light.fi-button--disabled,
.c3.fi-button--secondary-light[disabled],
.c3.fi-button--secondary-light:disabled {
  color: hsl(202,7%,67%);
  background: none;
  background-color: hsl(202,7%,97%);
}

.c3 > .fi-button_icon > .fi-icon {
  width: 16px;
  height: 16px;
  margin-right: 8px;
  vertical-align: middle;
  -webkit-transform: translateY(-0.1em);
  -ms-transform: translateY(-0.1em);
  transform: translateY(-0.1em);
}

.c3 > .fi-button_icon--right > .fi-icon {
  margin-right: 0;
  margin-left: 8px;
}

.c3.fi-button--icon-only {
  padding: 6px 11px;
}

.c3.fi-button--icon-only > .fi-button_icon > .fi-icon {
  margin-right: 0;
}

.c3.fi-button--icon-only > .fi-button_icon--right > .fi-icon {
  margin-left: 0;
}

.c3.fi-button--disabled > .fi-button_icon {
  cursor: not-allowed;
}

.c5 {
  vertical-align: baseline;
}

.c5.fi-icon {
  display: inline-block;
}

.c5 .fi-icon-base-fill {
  fill: currentColor;
}

.c5 .fi-icon-base-stroke {
  stroke: currentColor;
}

.c5.fi-icon--cursor-pointer {
  cursor: pointer;
}

.c5.fi-icon--cursor-pointer * {
  cursor: inherit;
}

.c1.fi-action-menu--full-width {
  width: 100%;
}

.c8 {
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c8.fi-action-menu-item {
  position: relative;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: hsl(0,0%,13%);
  padding: 10px 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: pointer;
  background: inherit;
  border: none;
  border-radius: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8.fi-action-menu-item:active,
.c8.fi-action-menu-item:focus,
.c8.fi-action-menu-item:hover,
.c8.fi-action-menu-item:visited {
  border: none;
  outline: none;
  color: hsl(0,0%,13%);
}

.c8.fi-action-menu-item .fi-icon {
  margin-right: 8px;
  width: 16px;
  height: 16px;
  pointer-events: none;
}

.c8.fi-action-menu-item--disabled {
  cursor: not-allowed;
  color: hsl(202,7%,67%);
}

.c8.fi-action-menu-item--disabled:active,
.c8.fi-action-menu-item--disabled:focus,
.c8.fi-action-menu-item--disabled:hover,
.c8.fi-action-menu-item--disabled:visited {
  color: hsl(202,7%,67%);
}

.c8.fi-action-menu-item--selected {
  color: hsl(0,0%,100%);
  background: hsl(212,63%,45%);
}

.c8.fi-action-menu-item--selected:active,
.c8.fi-action-menu-item--selected:focus,
.c8.fi-action-menu-item--selected:hover,
.c8.fi-action-menu-item--selected:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: hsl(0,0%,100%);
  cursor: pointer;
}

.c8.fi-action-menu-item--selected:after {
  content: '';
}

.c8.fi-action-menu-item--selected.fi-action-menu-item--disabled {
  cursor: not-allowed;
  color: hsl(202,7%,67%);
}

.c9.fi-action-menu-divider {
  height: 17px;
  min-height: 17px;
  padding-left: 15px;
  padding-right: 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c9.fi-action-menu-divider .fi-action-menu-divider_line {
  height: 1px;
  width: 100%;
  background-color: hsl(202,7%,80%);
}

@media (forced-colors:active) {
  .c8.fi-action-menu-item--disabled {
    color: GrayText;
  }
}

@media (forced-colors:active) {
  .c8.fi-action-menu-item--selected:after {
    position: absolute;
    left: 1px;
    right: 1px;
    top: 1px;
    bottom: 1px;
    border: solid 3px Highlight;
  }
}

@media (forced-colors:active) {
  .c8.fi-action-menu-item--selected.fi-action-menu-item--disabled {
    color: GrayText;
  }
}

@media (forced-colors:active) {
  .c9.fi-action-menu-divider .fi-action-menu-divider_line {
    background-color: Highlight;
  }
}

<body>
  <div>
    <div
      class="c0 fi-action-menu c1 am-test"
    >
      <button
        aria-controls="test-id-menu"
        aria-disabled="false"
        aria-expanded="false"
        aria-haspopup="menu"
        aria-label="ActionMenuTest"
        class="c2 fi-button c3 fi-button--secondary-noborder"
        id="test-id"
        name="am-test-name"
        tabindex="0"
        type="button"
      >
        Actions
        <span
          class="c4 fi-button_icon fi-button_icon--right"
        >
          <svg
            aria-hidden="true"
            class="fi-icon c5"
            focusable="false"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="fi-icon-base-fill"
              d="M12 6c-1.654 0-3-1.346-3-3s1.346-3 3-3 3 1.346 3 3-1.346 3-3 3m0 9c-1.654 0-3-1.346-3-3s1.346-3 3-3 3 1.346 3 3-1.346 3-3 3m0 9c-1.654 0-3-1.346-3-3s1.346-3 3-3 3 1.346 3 3-1.346 3-3 3"
              fill="#222"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
      <div
        class="c6 c7 fi-action-menu-popover fi-action-menu-popover--hidden"
        role="none"
        style="position: fixed; left: 0px; top: 0px;"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          class="c6 fi-action-menu-popover_list"
          id="test-id-menu"
          role="menu"
          tabindex="-1"
        >
          <button
            class="c2 fi-action-menu-item c8"
            id="test-id-menu-list-item-0"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            Item 1
          </button>
          <button
            class="c2 fi-action-menu-item c8"
            id="test-id-menu-list-item-1"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            Item 2
          </button>
          <div
            class="c0 c9 fi-action-menu-divider"
            role="presentation"
          >
            <div
              class="c0 fi-action-menu-divider_line"
            />
          </div>
          <button
            class="c2 fi-action-menu-item c8"
            id="test-id-menu-list-item-3"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            Item 3
          </button>
        </div>
        <div
          aria-hidden="true"
          class="fi-action-menu-popover_popper-arrow"
          data-popper-arrow="true"
          style="position: absolute;"
          tabindex="-1"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`movement in ActionMenu should match snapshot 1`] = `
.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
  cursor: pointer;
}

.c2:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c2::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c2::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

.c2::-webkit-inner-spin-button {
  height: auto;
}

.c2::-webkit-outer-spin-button {
  height: auto;
}

.c2::before,
.c2::after {
  box-sizing: border-box;
}

.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c0::before,
.c0::after {
  box-sizing: border-box;
}

.c6 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c6::before,
.c6::after {
  box-sizing: border-box;
}

.c4 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c4::before,
.c4::after {
  box-sizing: border-box;
}

.c7 {
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c7.fi-action-menu-popover {
  background-color: hsl(0,0%,100%);
  box-shadow: 0px 4px 8px 0px hsla(0,0%,13%,0.14);
  border: 1px solid hsl(0,0%,42%);
  border-radius: 2px;
  padding-top: 8px;
  padding-bottom: 8px;
  z-index: 888;
}

.c7.fi-action-menu-popover--hidden {
  visibility: hidden;
}

.c7 .fi-action-menu-popover_list {
  margin: 0;
  padding-left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  list-style-type: none;
  overflow-y: auto;
  max-height: 265px;
}

.c7 .fi-action-menu-popover_list:focus {
  outline: none;
}

.c7 .fi-action-menu-popover_popper-arrow::before,
.c7 .fi-action-menu-popover_popper-arrow::after {
  content: '';
  position: absolute;
  left: -9px;
  height: 0;
  width: 0;
  border: solid transparent;
  pointer-events: none;
}

.c7 .fi-action-menu-popover_popper-arrow[data-popper-placement^='bottom-end'] {
  bottom: 100%;
}

.c7 .fi-action-menu-popover_popper-arrow[data-popper-placement^='bottom-end']::before {
  border-bottom-color: hsl(0,0%,42%);
  border-width: 9px;
  margin-right: -9px;
  bottom: 100%;
}

.c7 .fi-action-menu-popover_popper-arrow[data-popper-placement^='bottom-end']::after {
  border-bottom-color: hsl(0,0%,100%);
  border-width: 8px;
  margin-right: -9px;
  left: -8px;
  bottom: 100%;
}

.c7 .fi-action-menu-popover_popper-arrow[data-popper-placement^='top-end'] {
  top: 100%;
}

.c7 .fi-action-menu-popover_popper-arrow[data-popper-placement^='top-end']::before {
  border-top-color: hsl(0,0%,42%);
  border-width: 9px;
  margin-right: -9px;
}

.c7 .fi-action-menu-popover_popper-arrow[data-popper-placement^='top-end']::after {
  border-top-color: hsl(0,0%,100%);
  border-width: 8px;
  margin-right: -9px;
  left: -8px;
}

.c3 {
  color: hsl(0,0%,13%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  padding: 9px 20px;
  min-height: 40px;
  color: hsl(0,0%,100%);
  background: linear-gradient(0deg,hsl(212,63%,37%) 0%,hsl(212,63%,45%) 100%);
  border-radius: 2px;
  text-align: center;
  text-shadow: 0 1px 1px hsla(214,100%,24%,0.5);
  cursor: pointer;
  border: 1px solid transparent;
}

.c3:focus {
  position: relative;
  outline: 3px solid transparent;
}

.c3:focus::after {
  content: '';
  position: absolute;
  pointer-events: none;
  top: -2px;
  right: -2px;
  bottom: -2px;
  left: -2px;
  border-radius: 2px;
  background-color: transparent;
  border: 0px solid hsl(0,0%,100%);
  box-sizing: border-box;
  box-shadow: 0 0 0 2px hsl(196,77%,44%);
  z-index: 9999;
}

.c3:hover {
  background: linear-gradient(0deg,hsl(212,63%,45%) 0%,hsl(212,63%,49%) 100%);
  outline: 2px solid transparent;
}

.c3:active {
  background: hsl(212,63%,37%);
}

.c3.fi-button--disabled,
.c3[disabled],
.c3:disabled {
  text-shadow: 0 1px 1px rgba(33,33,33,0.5);
  background: linear-gradient(0deg,hsl(202,7%,67%) 0%,hsl(202,7%,80%) 100%);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: not-allowed;
}

.c3.fi-button--disabled::after {
  border: none;
  box-shadow: none;
}

.c3.fi-button--fullwidth {
  display: block;
  width: 100%;
}

.c3.fi-button--inverted {
  background: none;
  background-color: hsl(212,63%,45%);
  border: 1px solid hsl(0,0%,100%);
  text-shadow: none;
}

.c3.fi-button--inverted:hover {
  background: linear-gradient(-180deg,hsla(0,0%,100%,0.1) 0%,hsla(0,0%,100%,0) 100%);
}

.c3.fi-button--inverted:active {
  background: none;
  background-color: hsl(212,63%,45%);
}

.c3.fi-button--inverted.fi-button--disabled,
.c3.fi-button--inverted[disabled],
.c3.fi-button--inverted:disabled {
  opacity: 0.41;
  background: none;
  background-color: none;
}

.c3.fi-button--secondary {
  color: hsl(212,63%,45%);
  background: none;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(212,63%,45%);
  text-shadow: none;
}

.c3.fi-button--secondary:hover {
  background: linear-gradient(-180deg,hsl(202,7%,93%) 0%,hsla(0,0%,100%,0) 100%);
}

.c3.fi-button--secondary:active {
  background: none;
  background-color: hsl(202,7%,93%);
}

.c3.fi-button--secondary.fi-button--disabled,
.c3.fi-button--secondary[disabled],
.c3.fi-button--secondary:disabled {
  color: hsl(202,7%,67%);
  text-shadow: none;
  background: none;
  background-color: hsl(212,63%,98%);
  border-color: hsl(202,7%,67%);
}

.c3.fi-button--secondary-noborder {
  color: hsl(212,63%,45%);
  background: none;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(212,63%,45%);
  text-shadow: none;
  border: none;
  padding: 10px 20px;
  background-color: transparent;
}

.c3.fi-button--secondary-noborder:hover {
  background: linear-gradient(-180deg,hsl(202,7%,93%) 0%,hsla(0,0%,100%,0) 100%);
}

.c3.fi-button--secondary-noborder:active {
  background: none;
  background-color: hsl(202,7%,93%);
}

.c3.fi-button--secondary-noborder.fi-button--disabled,
.c3.fi-button--secondary-noborder[disabled],
.c3.fi-button--secondary-noborder:disabled {
  color: hsl(202,7%,67%);
  text-shadow: none;
  background: none;
  background-color: hsl(212,63%,98%);
  border-color: hsl(202,7%,67%);
}

.c3.fi-button--secondary-light {
  color: hsl(212,63%,45%);
  color: hsl(212,63%,45%);
  background: none;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(212,63%,45%);
  text-shadow: none;
  background: linear-gradient(0deg,hsl(215,100%,95%),hsl(215,100%,97%));
  padding: 10px 20px;
  border: none;
}

.c3.fi-button--secondary-light:hover {
  background: linear-gradient(-180deg,hsl(202,7%,93%) 0%,hsla(0,0%,100%,0) 100%);
}

.c3.fi-button--secondary-light:active {
  background: none;
  background-color: hsl(202,7%,93%);
}

.c3.fi-button--secondary-light.fi-button--disabled,
.c3.fi-button--secondary-light[disabled],
.c3.fi-button--secondary-light:disabled {
  color: hsl(202,7%,67%);
  text-shadow: none;
  background: none;
  background-color: hsl(212,63%,98%);
  border-color: hsl(202,7%,67%);
}

.c3.fi-button--secondary-light:hover {
  background: linear-gradient(0deg,hsl(215,100%,97%),hsl(212,63%,98%));
}

.c3.fi-button--secondary-light:active {
  background: linear-gradient(0deg,hsl(202,7%,93%),hsl(202,7%,97%));
}

.c3.fi-button--secondary-light.fi-button--disabled,
.c3.fi-button--secondary-light[disabled],
.c3.fi-button--secondary-light:disabled {
  color: hsl(202,7%,67%);
  background: none;
  background-color: hsl(202,7%,97%);
}

.c3 > .fi-button_icon > .fi-icon {
  width: 16px;
  height: 16px;
  margin-right: 8px;
  vertical-align: middle;
  -webkit-transform: translateY(-0.1em);
  -ms-transform: translateY(-0.1em);
  transform: translateY(-0.1em);
}

.c3 > .fi-button_icon--right > .fi-icon {
  margin-right: 0;
  margin-left: 8px;
}

.c3.fi-button--icon-only {
  padding: 6px 11px;
}

.c3.fi-button--icon-only > .fi-button_icon > .fi-icon {
  margin-right: 0;
}

.c3.fi-button--icon-only > .fi-button_icon--right > .fi-icon {
  margin-left: 0;
}

.c3.fi-button--disabled > .fi-button_icon {
  cursor: not-allowed;
}

.c5 {
  vertical-align: baseline;
}

.c5.fi-icon {
  display: inline-block;
}

.c5 .fi-icon-base-fill {
  fill: currentColor;
}

.c5 .fi-icon-base-stroke {
  stroke: currentColor;
}

.c5.fi-icon--cursor-pointer {
  cursor: pointer;
}

.c5.fi-icon--cursor-pointer * {
  cursor: inherit;
}

.c1.fi-action-menu--full-width {
  width: 100%;
}

.c8 {
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c8.fi-action-menu-item {
  position: relative;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: hsl(0,0%,13%);
  padding: 10px 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: pointer;
  background: inherit;
  border: none;
  border-radius: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8.fi-action-menu-item:active,
.c8.fi-action-menu-item:focus,
.c8.fi-action-menu-item:hover,
.c8.fi-action-menu-item:visited {
  border: none;
  outline: none;
  color: hsl(0,0%,13%);
}

.c8.fi-action-menu-item .fi-icon {
  margin-right: 8px;
  width: 16px;
  height: 16px;
  pointer-events: none;
}

.c8.fi-action-menu-item--disabled {
  cursor: not-allowed;
  color: hsl(202,7%,67%);
}

.c8.fi-action-menu-item--disabled:active,
.c8.fi-action-menu-item--disabled:focus,
.c8.fi-action-menu-item--disabled:hover,
.c8.fi-action-menu-item--disabled:visited {
  color: hsl(202,7%,67%);
}

.c8.fi-action-menu-item--selected {
  color: hsl(0,0%,100%);
  background: hsl(212,63%,45%);
}

.c8.fi-action-menu-item--selected:active,
.c8.fi-action-menu-item--selected:focus,
.c8.fi-action-menu-item--selected:hover,
.c8.fi-action-menu-item--selected:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: hsl(0,0%,100%);
  cursor: pointer;
}

.c8.fi-action-menu-item--selected:after {
  content: '';
}

.c8.fi-action-menu-item--selected.fi-action-menu-item--disabled {
  cursor: not-allowed;
  color: hsl(202,7%,67%);
}

.c9.fi-action-menu-divider {
  height: 17px;
  min-height: 17px;
  padding-left: 15px;
  padding-right: 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c9.fi-action-menu-divider .fi-action-menu-divider_line {
  height: 1px;
  width: 100%;
  background-color: hsl(202,7%,80%);
}

@media (forced-colors:active) {
  .c8.fi-action-menu-item--disabled {
    color: GrayText;
  }
}

@media (forced-colors:active) {
  .c8.fi-action-menu-item--selected:after {
    position: absolute;
    left: 1px;
    right: 1px;
    top: 1px;
    bottom: 1px;
    border: solid 3px Highlight;
  }
}

@media (forced-colors:active) {
  .c8.fi-action-menu-item--selected.fi-action-menu-item--disabled {
    color: GrayText;
  }
}

@media (forced-colors:active) {
  .c9.fi-action-menu-divider .fi-action-menu-divider_line {
    background-color: Highlight;
  }
}

<body>
  <div>
    <div
      class="c0 fi-action-menu c1 am-test"
    >
      <button
        aria-controls="test-id-menu"
        aria-disabled="false"
        aria-expanded="true"
        aria-haspopup="menu"
        aria-label="am-test"
        class="c2 fi-button c3 fi-button--secondary"
        id="test-id"
        name="am-test-name"
        tabindex="0"
        type="button"
      >
        Actions
        <span
          class="c4 fi-button_icon fi-button_icon--right"
        >
          <svg
            aria-hidden="true"
            class="fi-icon c5"
            focusable="false"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="fi-icon-base-fill"
              d="M12 6c-1.654 0-3-1.346-3-3s1.346-3 3-3 3 1.346 3 3-1.346 3-3 3m0 9c-1.654 0-3-1.346-3-3s1.346-3 3-3 3 1.346 3 3-1.346 3-3 3m0 9c-1.654 0-3-1.346-3-3s1.346-3 3-3 3 1.346 3 3-1.346 3-3 3"
              fill="#222"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
      <div
        class="c6 c7 fi-action-menu-popover"
        role="none"
        style="position: fixed; left: 0px; top: 0px; right: 0px; transform: translate(0px, 10px);"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          class="c6 fi-action-menu-popover_list"
          id="test-id-menu"
          role="menu"
          tabindex="-1"
        >
          <button
            class="c2 fi-action-menu-item c8 fi-action-menu-item--selected"
            id="test-id-menu-list-item-0"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            Item 1
          </button>
          <button
            class="c2 fi-action-menu-item c8"
            id="test-id-menu-list-item-1"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            Item 2
          </button>
          <div
            class="c0 c9 fi-action-menu-divider"
            role="presentation"
          >
            <div
              class="c0 fi-action-menu-divider_line"
            />
          </div>
          <button
            class="c2 fi-action-menu-item c8"
            id="test-id-menu-list-item-3"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            Item 3
          </button>
        </div>
        <div
          aria-hidden="true"
          class="fi-action-menu-popover_popper-arrow"
          data-popper-arrow="true"
          data-popper-placement="bottom-end"
          style="position: absolute; left: 0px; transform: translate(0px, 0px);"
          tabindex="-1"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`movement in ActionMenu should match snapshot 2`] = `
.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
  cursor: pointer;
}

.c2:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c2::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c2::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

.c2::-webkit-inner-spin-button {
  height: auto;
}

.c2::-webkit-outer-spin-button {
  height: auto;
}

.c2::before,
.c2::after {
  box-sizing: border-box;
}

.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c0::before,
.c0::after {
  box-sizing: border-box;
}

.c6 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c6::before,
.c6::after {
  box-sizing: border-box;
}

.c4 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c4::before,
.c4::after {
  box-sizing: border-box;
}

.c7 {
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c7.fi-action-menu-popover {
  background-color: hsl(0,0%,100%);
  box-shadow: 0px 4px 8px 0px hsla(0,0%,13%,0.14);
  border: 1px solid hsl(0,0%,42%);
  border-radius: 2px;
  padding-top: 8px;
  padding-bottom: 8px;
  z-index: 888;
}

.c7.fi-action-menu-popover--hidden {
  visibility: hidden;
}

.c7 .fi-action-menu-popover_list {
  margin: 0;
  padding-left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  list-style-type: none;
  overflow-y: auto;
  max-height: 265px;
}

.c7 .fi-action-menu-popover_list:focus {
  outline: none;
}

.c7 .fi-action-menu-popover_popper-arrow::before,
.c7 .fi-action-menu-popover_popper-arrow::after {
  content: '';
  position: absolute;
  left: -9px;
  height: 0;
  width: 0;
  border: solid transparent;
  pointer-events: none;
}

.c7 .fi-action-menu-popover_popper-arrow[data-popper-placement^='bottom-end'] {
  bottom: 100%;
}

.c7 .fi-action-menu-popover_popper-arrow[data-popper-placement^='bottom-end']::before {
  border-bottom-color: hsl(0,0%,42%);
  border-width: 9px;
  margin-right: -9px;
  bottom: 100%;
}

.c7 .fi-action-menu-popover_popper-arrow[data-popper-placement^='bottom-end']::after {
  border-bottom-color: hsl(0,0%,100%);
  border-width: 8px;
  margin-right: -9px;
  left: -8px;
  bottom: 100%;
}

.c7 .fi-action-menu-popover_popper-arrow[data-popper-placement^='top-end'] {
  top: 100%;
}

.c7 .fi-action-menu-popover_popper-arrow[data-popper-placement^='top-end']::before {
  border-top-color: hsl(0,0%,42%);
  border-width: 9px;
  margin-right: -9px;
}

.c7 .fi-action-menu-popover_popper-arrow[data-popper-placement^='top-end']::after {
  border-top-color: hsl(0,0%,100%);
  border-width: 8px;
  margin-right: -9px;
  left: -8px;
}

.c3 {
  color: hsl(0,0%,13%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  padding: 9px 20px;
  min-height: 40px;
  color: hsl(0,0%,100%);
  background: linear-gradient(0deg,hsl(212,63%,37%) 0%,hsl(212,63%,45%) 100%);
  border-radius: 2px;
  text-align: center;
  text-shadow: 0 1px 1px hsla(214,100%,24%,0.5);
  cursor: pointer;
  border: 1px solid transparent;
}

.c3:focus {
  position: relative;
  outline: 3px solid transparent;
}

.c3:focus::after {
  content: '';
  position: absolute;
  pointer-events: none;
  top: -2px;
  right: -2px;
  bottom: -2px;
  left: -2px;
  border-radius: 2px;
  background-color: transparent;
  border: 0px solid hsl(0,0%,100%);
  box-sizing: border-box;
  box-shadow: 0 0 0 2px hsl(196,77%,44%);
  z-index: 9999;
}

.c3:hover {
  background: linear-gradient(0deg,hsl(212,63%,45%) 0%,hsl(212,63%,49%) 100%);
  outline: 2px solid transparent;
}

.c3:active {
  background: hsl(212,63%,37%);
}

.c3.fi-button--disabled,
.c3[disabled],
.c3:disabled {
  text-shadow: 0 1px 1px rgba(33,33,33,0.5);
  background: linear-gradient(0deg,hsl(202,7%,67%) 0%,hsl(202,7%,80%) 100%);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: not-allowed;
}

.c3.fi-button--disabled::after {
  border: none;
  box-shadow: none;
}

.c3.fi-button--fullwidth {
  display: block;
  width: 100%;
}

.c3.fi-button--inverted {
  background: none;
  background-color: hsl(212,63%,45%);
  border: 1px solid hsl(0,0%,100%);
  text-shadow: none;
}

.c3.fi-button--inverted:hover {
  background: linear-gradient(-180deg,hsla(0,0%,100%,0.1) 0%,hsla(0,0%,100%,0) 100%);
}

.c3.fi-button--inverted:active {
  background: none;
  background-color: hsl(212,63%,45%);
}

.c3.fi-button--inverted.fi-button--disabled,
.c3.fi-button--inverted[disabled],
.c3.fi-button--inverted:disabled {
  opacity: 0.41;
  background: none;
  background-color: none;
}

.c3.fi-button--secondary {
  color: hsl(212,63%,45%);
  background: none;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(212,63%,45%);
  text-shadow: none;
}

.c3.fi-button--secondary:hover {
  background: linear-gradient(-180deg,hsl(202,7%,93%) 0%,hsla(0,0%,100%,0) 100%);
}

.c3.fi-button--secondary:active {
  background: none;
  background-color: hsl(202,7%,93%);
}

.c3.fi-button--secondary.fi-button--disabled,
.c3.fi-button--secondary[disabled],
.c3.fi-button--secondary:disabled {
  color: hsl(202,7%,67%);
  text-shadow: none;
  background: none;
  background-color: hsl(212,63%,98%);
  border-color: hsl(202,7%,67%);
}

.c3.fi-button--secondary-noborder {
  color: hsl(212,63%,45%);
  background: none;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(212,63%,45%);
  text-shadow: none;
  border: none;
  padding: 10px 20px;
  background-color: transparent;
}

.c3.fi-button--secondary-noborder:hover {
  background: linear-gradient(-180deg,hsl(202,7%,93%) 0%,hsla(0,0%,100%,0) 100%);
}

.c3.fi-button--secondary-noborder:active {
  background: none;
  background-color: hsl(202,7%,93%);
}

.c3.fi-button--secondary-noborder.fi-button--disabled,
.c3.fi-button--secondary-noborder[disabled],
.c3.fi-button--secondary-noborder:disabled {
  color: hsl(202,7%,67%);
  text-shadow: none;
  background: none;
  background-color: hsl(212,63%,98%);
  border-color: hsl(202,7%,67%);
}

.c3.fi-button--secondary-light {
  color: hsl(212,63%,45%);
  color: hsl(212,63%,45%);
  background: none;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(212,63%,45%);
  text-shadow: none;
  background: linear-gradient(0deg,hsl(215,100%,95%),hsl(215,100%,97%));
  padding: 10px 20px;
  border: none;
}

.c3.fi-button--secondary-light:hover {
  background: linear-gradient(-180deg,hsl(202,7%,93%) 0%,hsla(0,0%,100%,0) 100%);
}

.c3.fi-button--secondary-light:active {
  background: none;
  background-color: hsl(202,7%,93%);
}

.c3.fi-button--secondary-light.fi-button--disabled,
.c3.fi-button--secondary-light[disabled],
.c3.fi-button--secondary-light:disabled {
  color: hsl(202,7%,67%);
  text-shadow: none;
  background: none;
  background-color: hsl(212,63%,98%);
  border-color: hsl(202,7%,67%);
}

.c3.fi-button--secondary-light:hover {
  background: linear-gradient(0deg,hsl(215,100%,97%),hsl(212,63%,98%));
}

.c3.fi-button--secondary-light:active {
  background: linear-gradient(0deg,hsl(202,7%,93%),hsl(202,7%,97%));
}

.c3.fi-button--secondary-light.fi-button--disabled,
.c3.fi-button--secondary-light[disabled],
.c3.fi-button--secondary-light:disabled {
  color: hsl(202,7%,67%);
  background: none;
  background-color: hsl(202,7%,97%);
}

.c3 > .fi-button_icon > .fi-icon {
  width: 16px;
  height: 16px;
  margin-right: 8px;
  vertical-align: middle;
  -webkit-transform: translateY(-0.1em);
  -ms-transform: translateY(-0.1em);
  transform: translateY(-0.1em);
}

.c3 > .fi-button_icon--right > .fi-icon {
  margin-right: 0;
  margin-left: 8px;
}

.c3.fi-button--icon-only {
  padding: 6px 11px;
}

.c3.fi-button--icon-only > .fi-button_icon > .fi-icon {
  margin-right: 0;
}

.c3.fi-button--icon-only > .fi-button_icon--right > .fi-icon {
  margin-left: 0;
}

.c3.fi-button--disabled > .fi-button_icon {
  cursor: not-allowed;
}

.c5 {
  vertical-align: baseline;
}

.c5.fi-icon {
  display: inline-block;
}

.c5 .fi-icon-base-fill {
  fill: currentColor;
}

.c5 .fi-icon-base-stroke {
  stroke: currentColor;
}

.c5.fi-icon--cursor-pointer {
  cursor: pointer;
}

.c5.fi-icon--cursor-pointer * {
  cursor: inherit;
}

.c1.fi-action-menu--full-width {
  width: 100%;
}

.c8 {
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c8.fi-action-menu-item {
  position: relative;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: hsl(0,0%,13%);
  padding: 10px 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: pointer;
  background: inherit;
  border: none;
  border-radius: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8.fi-action-menu-item:active,
.c8.fi-action-menu-item:focus,
.c8.fi-action-menu-item:hover,
.c8.fi-action-menu-item:visited {
  border: none;
  outline: none;
  color: hsl(0,0%,13%);
}

.c8.fi-action-menu-item .fi-icon {
  margin-right: 8px;
  width: 16px;
  height: 16px;
  pointer-events: none;
}

.c8.fi-action-menu-item--disabled {
  cursor: not-allowed;
  color: hsl(202,7%,67%);
}

.c8.fi-action-menu-item--disabled:active,
.c8.fi-action-menu-item--disabled:focus,
.c8.fi-action-menu-item--disabled:hover,
.c8.fi-action-menu-item--disabled:visited {
  color: hsl(202,7%,67%);
}

.c8.fi-action-menu-item--selected {
  color: hsl(0,0%,100%);
  background: hsl(212,63%,45%);
}

.c8.fi-action-menu-item--selected:active,
.c8.fi-action-menu-item--selected:focus,
.c8.fi-action-menu-item--selected:hover,
.c8.fi-action-menu-item--selected:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: hsl(0,0%,100%);
  cursor: pointer;
}

.c8.fi-action-menu-item--selected:after {
  content: '';
}

.c8.fi-action-menu-item--selected.fi-action-menu-item--disabled {
  cursor: not-allowed;
  color: hsl(202,7%,67%);
}

.c9.fi-action-menu-divider {
  height: 17px;
  min-height: 17px;
  padding-left: 15px;
  padding-right: 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c9.fi-action-menu-divider .fi-action-menu-divider_line {
  height: 1px;
  width: 100%;
  background-color: hsl(202,7%,80%);
}

@media (forced-colors:active) {
  .c8.fi-action-menu-item--disabled {
    color: GrayText;
  }
}

@media (forced-colors:active) {
  .c8.fi-action-menu-item--selected:after {
    position: absolute;
    left: 1px;
    right: 1px;
    top: 1px;
    bottom: 1px;
    border: solid 3px Highlight;
  }
}

@media (forced-colors:active) {
  .c8.fi-action-menu-item--selected.fi-action-menu-item--disabled {
    color: GrayText;
  }
}

@media (forced-colors:active) {
  .c9.fi-action-menu-divider .fi-action-menu-divider_line {
    background-color: Highlight;
  }
}

<body>
  <div>
    <div
      class="c0 fi-action-menu c1 am-test"
    >
      <button
        aria-controls="test-id-menu"
        aria-disabled="false"
        aria-expanded="true"
        aria-haspopup="menu"
        aria-label="am-test"
        class="c2 fi-button c3 fi-button--secondary"
        id="test-id"
        name="am-test-name"
        tabindex="0"
        type="button"
      >
        Actions
        <span
          class="c4 fi-button_icon fi-button_icon--right"
        >
          <svg
            aria-hidden="true"
            class="fi-icon c5"
            focusable="false"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="fi-icon-base-fill"
              d="M12 6c-1.654 0-3-1.346-3-3s1.346-3 3-3 3 1.346 3 3-1.346 3-3 3m0 9c-1.654 0-3-1.346-3-3s1.346-3 3-3 3 1.346 3 3-1.346 3-3 3m0 9c-1.654 0-3-1.346-3-3s1.346-3 3-3 3 1.346 3 3-1.346 3-3 3"
              fill="#222"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
      <div
        class="c6 c7 fi-action-menu-popover"
        role="none"
        style="position: fixed; left: 0px; top: 0px; right: 0px; transform: translate(0px, 10px);"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          class="c6 fi-action-menu-popover_list"
          id="test-id-menu"
          role="menu"
          tabindex="-1"
        >
          <button
            class="c2 fi-action-menu-item c8 fi-action-menu-item--selected"
            id="test-id-menu-list-item-0"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            Item 1
          </button>
          <button
            class="c2 fi-action-menu-item c8"
            id="test-id-menu-list-item-1"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            Item 2
          </button>
          <div
            class="c0 c9 fi-action-menu-divider"
            role="presentation"
          >
            <div
              class="c0 fi-action-menu-divider_line"
            />
          </div>
          <button
            class="c2 fi-action-menu-item c8"
            id="test-id-menu-list-item-3"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            Item 3
          </button>
        </div>
        <div
          aria-hidden="true"
          class="fi-action-menu-popover_popper-arrow"
          data-popper-arrow="true"
          data-popper-placement="bottom-end"
          style="position: absolute; left: 0px; transform: translate(0px, 0px);"
          tabindex="-1"
        />
      </div>
    </div>
  </div>
</body>
`;
